Fixing button text wrap

--- a/styles/keepPage.module.css
+++ b/styles/keepPage.module.css
@@ -59,6 +59,7 @@
   padding: 0;
   font-size: 1.6rem;
   color: var(--color-darkblue);
+  white-space: nowrap;
 }
 
 .title,
